test/types/typeFunctions/illegalValueReturn.good
illegalValueReturn.chpl:2: In function 'helper':
illegalValueReturn.chpl:8: error: illegal return of value where type is expected
  illegalValueReturn.chpl:11: called as helper(param x = 42)
